# SAT-BO

./: README.md
Benchmark-VerificationRules-SATEncoding/1ee0e949-d186-4b94-a0fd-efc55d06a7e2/: 02236567-d602-4f91-8f30-ee93938c96f5.cnf  02d586ce-eb01-44dc-a73b-aa7ddb9cbfe0.cnf  04df2e64-5b9f-4339-9510-7788819bcd08.cnf  0751293c-60ad-4836-bd36-0b782c82f17e.cnf  080682e8-8fe9-4245-9c36-ccde530586c5.cnf  (+121 more)
answers/: Binomial_best.csv  bucket1.csv
benchmark_verificationRule-SAT-Encoding/: 07a22bc4-277c-4000-ad51-fd97537b64d3.cnf  134b8cd8-4091-440d-8964-2c8fd77b7a6a.cnf  1c0e7059-24cc-4eca-ad88-03b69b7bd79d.cnf  6e3abcf2-76fb-45df-adbf-607ce5cee26f.cnf  8545e4cc-7b9e-44a1-b803-fcdae544c71f.cnf  89e85e75-0b6e-4f37-8136-ecf6d791bbc9.cnf  fae49b00-d751-49b9-ac87-06527d59bc94.cnf
codes/: README.md  main.py
codes/SAT/: CMakeLists.txt  main.cpp  readme.md  test.py
codes/SAT/sat/: check.cpp  check.h  creatFlow.cpp  creatFlow.h  dpll.cpp  dpll.h  genSolutions.cpp  genSolutions.h  ioBase.cpp  ioBase.h  main_example.cpp  structBase.h  vitrualEnvCaucute.cpp  vitrualEnvCaucute.h  walksat.cpp  walksat.h
codes/SAT/src_BOBSS0/: DPLL.cpp  Main.cpp
codes/SAT/src_BOBSS1/: DPLL.cpp  Main.cpp  SAT.h
codes/SAT/src_BOBSS2/: DPLL.cpp  Main.cpp
codes/SAT/src_BOBSS3/: DPLL.cpp  Main.cpp
codes/SAT/src_optimize/: DPLL.cpp  Main.cpp
data/: 031d13c9-0d96-4c26-acab-dc31a11d8753.cnf  18e97d87-324a-4045-93a7-d0ce46802e97.cnf  43ecff4e-2851-4e15-b673-5579fa30d568.cnf  84e50405-6d52-4470-9853-2d64f600fd43.cnf  f58ba345-1d9f-4cea-a78c-e0f81cd50c44.cnf
(+8887 files in other folders)
